# 389Rfall2019

week/1/writeup/: README.md
week/10/: CMakeLists.txt  Makefile  crack.c
week/10/writeup/: README.md
week/11/: README.md
week/2/writeup/: README.md  filtered-EricNorman84.txt  filtered-ejnoman.txt  filtered-ejnorman84.txt  stub.py  stub_sync.py  stub_threads.py
week/2/writeup/NotFullyWorking/: stub.py  stub3.py  stub_old_sync_version_win.py
week/3/writeup/: README.md
week/4/writeup/: README.md
week/4/writeup/wattsampshell/: Cargo.toml  README.txt
week/4/writeup/wattsampshell/src/: main.rs
week/6/writeup/: README.md
week/7/writeup/: README.md
week/8/writeup/: README.md  a.out  print_pass.c
week/9/writeup/: README.md
week/9/writeup/fpffparse/: Cargo.toml  README.txt
week/9/writeup/fpffparse/src/: main.rs
