[package]
name = "wattsampshell"
version = "0.1.0"
authors = ["smberger-umd <smberger@terpmail.umd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "5"
async-std = "0.99.8"
futures-preview = "=0.3.0-alpha.18"
simple-error = "0.2"
path-clean = "0.1.0"